Added Drops to NPC lookup
